# DevOpsRepo

./: Dockerfile  FuncA  Makefile  Makefile.am  Makefile.in  config.status  deb.deb  funca  http_server  http_server.cpp  http_server_test  http_server_test.cpp  scriptA.sh  scriptB.sh  test_FuncA  test_FuncA.cpp
.deps/: http_server.Po  http_server_test.Po
.github/workflows/: build.yml  build_test.yml  buildci.yml
autom4te.cache/: requests
deb/DEBIAN/: control
